--- a/resources/sass/partial/_header.scss
+++ b/resources/sass/partial/_header.scss
@@ -1,3 +1,28 @@
 header{
-    background-color:$PrimaryColor;
+    .Visa{
+        background-color:$PrimaryColor;
+        color: #fff;
+        span{
+            margin: 0 10px;
+        }
+        text-align: right;
+    }
+    .Menu{
+        margin: 10px auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        ul{
+            list-style: none;
+            display: flex;
+            li{
+                margin: 0 10px;
+                text-transform: uppercase;
+                a{
+                    color: #000;
+                    text-decoration: none;
+                }
+            }
+        }
+    }
 }
